# HandyFiles

./: .gitignore  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: build.yml
docs/: architecture.md  ffmpeg-strategy.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  settings.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/managers/: audio.rs  ffmpeg.rs  mod.rs  model.rs  transcription.rs
src/components/: DropZone.tsx  FileQueue.tsx  LogPanel.tsx  ModelSelector.tsx  SettingsPanel.tsx  TranscriptionResult.tsx
src/lib/: i18n.ts
src/stores/: modelStore.ts  transcriptionStore.ts
