[package]
name = "handyfiles"
version = "0.1.0"
description = "Cross-platform file transcription app"
authors = ["Ivan Lukyanets"]
edition = "2021"

[lib]
name = "handyfiles_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-store = "2"
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1", features = ["v4"] }

# Model downloads
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
sha2 = "0.10"

# Audio
hound = "3.5"

# Transcription (same crate as Handy uses)
transcribe-rs = { version = "0.3", features = ["whisper-cpp", "whisper-metal", "onnx"] }

# Archive extraction (for GigaAM models)
tar = "0.4"
flate2 = "1.0"
