[package]
name = "handyfiles"
version = "0.2.0"
description = "Cross-platform file transcription app"
authors = ["Ivan Lukyanets"]
edition = "2021"

[lib]
name = "handyfiles_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-store = "2"
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1", features = ["v4"] }

# Model downloads
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
sha2 = "0.10"

# Audio decoding (pure Rust — no system dependencies)
symphonia = { version = "0.5", features = ["isomp4", "aac", "mp3", "pcm", "flac", "ogg", "vorbis", "wav"] }
rubato = "0.15"
hound = "3.5"

# Transcription — base features (cross-platform)
transcribe-rs = { version = "0.3", features = ["whisper-cpp", "onnx"] }

# Archive extraction (for GigaAM models)
tar = "0.4"
flate2 = "1.0"

# ── Platform-specific: Metal GPU acceleration on macOS ──────────
[target.'cfg(target_os = "macos")'.dependencies]
transcribe-rs = { version = "0.3", features = ["whisper-metal"] }
